# OpenInfraPlatform.EarlyBinding

./: .hgignore  CMakeLists.txt  License.txt  Readme.md
Ifc2x3/: CMakeLists.txt
Ifc2x3/src/OpenInfraPlatform/Ifc2x3/: Ifc2x3Entities.h  Ifc2x3EntitiesMap.h  Ifc2x3EntityBroker.cpp  Ifc2x3EntityEnums.h  Ifc2x3Types.h
Ifc2x3/src/OpenInfraPlatform/Ifc2x3/entity/: Ifc2DCompositeCurve.cpp  IfcAbsorbedDoseMeasure.cpp  IfcAccelerationMeasure.cpp  IfcActionRequest.cpp  IfcActionSourceTypeEnum.cpp  IfcActionTypeEnum.cpp  IfcActor.cpp  IfcActorRole.cpp  IfcActorSelect.cpp  IfcActuatorType.cpp  IfcActuatorTypeEnum.cpp  IfcAddress.cpp  IfcAddressTypeEnum.cpp  IfcAheadOrBehind.cpp  IfcAirTerminalBoxType.cpp  IfcAirTerminalBoxTypeEnum.cpp  IfcAirTerminalType.cpp  IfcAirTerminalTypeEnum.cpp  IfcAirToAirHeatRecoveryType.cpp  IfcAirToAirHeatRecoveryTypeEnum.cpp  IfcAlarmType.cpp  IfcAlarmTypeEnum.cpp  IfcAmountOfSubstanceMeasure.cpp  IfcAnalysisModelTypeEnum.cpp  IfcAnalysisTheoryTypeEnum.cpp  IfcAngularDimension.cpp  IfcAngularVelocityMeasure.cpp  IfcAnnotation.cpp  IfcAnnotationCurveOccurrence.cpp  IfcAnnotationFillArea.cpp  IfcAnnotationFillAreaOccurrence.cpp  IfcAnnotationOccurrence.cpp  IfcAnnotationSurface.cpp  IfcAnnotationSurfaceOccurrence.cpp  IfcAnnotationSymbolOccurrence.cpp  IfcAnnotationTextOccurrence.cpp  IfcApplication.cpp  IfcAppliedValue.cpp  IfcAppliedValueRelationship.cpp  IfcAppliedValueSelect.cpp  (+940 more)
Ifc2x3/src/OpenInfraPlatform/Ifc2x3/model/: Ifc2x3Exception.cpp  Ifc2x3Model.cpp  Ifc2x3Model.h  Ifc2x3Object.cpp  Ifc2x3Object.h  UnitConverter.cpp
Ifc2x3/src/OpenInfraPlatform/Ifc2x3/reader/: Ifc2x3Reader.cpp  Ifc2x3Reader.h  IfcStepReader.cpp  IfcStepReader.h  IfcXmlReader.cpp  IfcXmlReader.h  ReaderUtil.cpp  ReaderUtil.h
Ifc2x3/src/OpenInfraPlatform/Ifc2x3/writer/: IfcStepWriter.cpp  IfcStepWriter.h  IfcXmlWriter.cpp  IfcXmlWriter.h  WriterUtil.cpp  WriterUtil.h
Ifc4/: CMakeLists.txt
Ifc4/src/OpenInfraPlatform/Ifc4/: Ifc4Entities.h  Ifc4EntitiesMap.h  Ifc4EntityBroker.cpp  Ifc4EntityEnums.h  Ifc4Types.h
Ifc4/src/OpenInfraPlatform/Ifc4/entity/: IfcAbsorbedDoseMeasure.cpp  IfcAccelerationMeasure.cpp  IfcActionRequest.cpp  IfcActionRequestTypeEnum.cpp  IfcActionSourceTypeEnum.cpp  IfcActionTypeEnum.cpp  IfcActor.cpp  IfcActorRole.cpp  IfcActorSelect.cpp  IfcActuator.cpp  IfcActuatorType.cpp  IfcActuatorTypeEnum.cpp  IfcAddress.cpp  IfcAddressTypeEnum.cpp  IfcAdvancedBrep.cpp  IfcAdvancedBrepWithVoids.cpp  IfcAdvancedFace.cpp  IfcAirTerminal.cpp  IfcAirTerminalBox.cpp  IfcAirTerminalBoxType.cpp  IfcAirTerminalBoxTypeEnum.cpp  IfcAirTerminalType.cpp  IfcAirTerminalTypeEnum.cpp  IfcAirToAirHeatRecovery.cpp  IfcAirToAirHeatRecoveryType.cpp  IfcAirToAirHeatRecoveryTypeEnum.cpp  IfcAlarm.cpp  IfcAlarmType.cpp  IfcAlarmTypeEnum.cpp  IfcAmountOfSubstanceMeasure.cpp  IfcAnalysisModelTypeEnum.cpp  IfcAnalysisTheoryTypeEnum.cpp  IfcAngularVelocityMeasure.cpp  IfcAnnotation.cpp  IfcAnnotationFillArea.cpp  IfcApplication.cpp  IfcAppliedValue.cpp  IfcAppliedValueSelect.cpp  IfcApproval.cpp  IfcApprovalRelationship.cpp  (+1125 more)
Ifc4/src/OpenInfraPlatform/Ifc4/guid/: CreateGuid_64.cpp  CreateGuid_64.h
Ifc4/src/OpenInfraPlatform/Ifc4/model/: Ifc4Exception.cpp  Ifc4Exception.h  Ifc4Model.cpp  Ifc4Model.h  Ifc4Object.cpp  Ifc4Object.h  Ifc4Util.h  StatusObservable.cpp  StatusObservable.h  UnitConverter.cpp  UnitConverter.h  UnknownEntityException.h
Ifc4/src/OpenInfraPlatform/Ifc4/reader/: Ifc4Reader.cpp  Ifc4Reader.h  IfcStepReader.cpp  IfcStepReader.h  IfcXmlReader.cpp  IfcXmlReader.h  ReaderUtil.cpp  ReaderUtil.h
Ifc4/src/OpenInfraPlatform/Ifc4/writer/: Ifc4Writer.h  IfcStepWriter.cpp  IfcStepWriter.h  IfcXmlWriter.cpp  IfcXmlWriter.h  WriterUtil.cpp  WriterUtil.h
Ifc4/src/OpenInfraPlatform/Ifc4/xml/: XmlTools.cpp  XmlTools.h
IfcAlignment/: CMakeLists.txt
IfcAlignment/schema/: IFC4_P6_longform_draft5_withMinorSyntaxCorrection.exp
IfcAlignment/src/OpenInfraPlatform/IfcAlignment/: IfcAlignmentP6Entities.h  IfcAlignmentP6EntitiesMap.h  IfcAlignmentP6EntityBroker.cpp  IfcAlignmentP6EntityEnums.h  IfcAlignmentP6Types.h
IfcAlignment/src/OpenInfraPlatform/IfcAlignment/entity/: IfcAbsorbedDoseMeasure.cpp  IfcAccelerationMeasure.cpp  IfcActionRequest.cpp  IfcActionRequestTypeEnum.cpp  IfcActionSourceTypeEnum.cpp  IfcActionTypeEnum.cpp  IfcActor.cpp  IfcActorRole.cpp  IfcActorSelect.cpp  IfcActuator.cpp  IfcActuatorType.cpp  IfcActuatorTypeEnum.cpp  IfcAddress.cpp  IfcAddressTypeEnum.cpp  IfcAdvancedBrep.cpp  IfcAdvancedBrepWithVoids.cpp  IfcAdvancedFace.cpp  IfcAirTerminal.cpp  IfcAirTerminalBox.cpp  IfcAirTerminalBoxType.cpp  IfcAirTerminalBoxTypeEnum.cpp  IfcAirTerminalType.cpp  IfcAirTerminalTypeEnum.cpp  IfcAirToAirHeatRecovery.cpp  IfcAirToAirHeatRecoveryType.cpp  IfcAirToAirHeatRecoveryTypeEnum.cpp  IfcAlarm.cpp  IfcAlarmType.cpp  IfcAlarmTypeEnum.cpp  IfcAlignment.cpp  IfcAlignment2DHorizontal.cpp  IfcAlignment2DHorizontalSegment.cpp  IfcAlignment2DSegment.cpp  IfcAlignment2DVerSegCircularArc.cpp  (+1145 more)
IfcAlignment1x1/: CMakeLists.txt
IfcAlignment1x1/src/OpenInfraPlatform/IfcAlignment1x1/: IfcAlignment1x1EntityBroker.cpp  IfcAlignment1x1Types.h
IfcAlignment1x1_original/: CMakeLists.txt
IfcAlignment1x1_original/schema/: IFC4x1_RC3.exp
IfcAlignment1x1_original/src/OpenInfraPlatform/IfcAlignment1x1/: IfcAlignment1x1Entities.h  IfcAlignment1x1EntitiesMap.h  IfcAlignment1x1EntityEnums.h
IfcBridge/: CMakeLists.txt
IfcBridge/src/OpenInfraPlatform/IfcBridge/: IfcBridgeEntities.h  IfcBridgeEntitiesMap.h  IfcBridgeEntityBroker.cpp  IfcBridgeEntityEnums.h  IfcBridgeTypes.h
IfcRoad/: CMakeLists.txt
IfcRoad/src/OpenInfraPlatform/IfcRoad/: IfcRoadEntities.h  IfcRoadEntitiesMap.h  IfcRoadEntityBroker.cpp  IfcRoadEntityEnums.h  IfcRoadTypes.h
IfcTunnel/: CMakeLists.txt
IfcTunnel/src/OpenInfraPlatform/IfcTunnel/: IfcTunnelEntities.h  IfcTunnelEntitiesMap.h  IfcTunnelEntityBroker.cpp  IfcTunnelEntityEnums.h  IfcTunnelTypes.h
schemas/: IFC2X3_TC1.exp  IFC2X4_RC3-Bridge.exp  IFC4_ADD1_Tunnel.exp  IFC4_P6_longform_draft5_withMinorSyntaxCorrection.exp  IfcRoad.exp
(+14206 files in other folders)
